--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,14 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+.btn-primary{
+  background-color: purple !important;
+  border: none !important;
+  border-radius: 50% !important;
+  padding-left: 20px !important;
+  padding-right: 20px !important;
+  padding-top: 25px !important;
+  padding-bottom: 25px !important;
+}
+.btn-primary:hover{
+  background-color: crimson !important;
 }
